[gd_scene load_steps=6 format=3 uid="uid://u31xl3ap3wd8"]

[ext_resource type="Theme" uid="uid://dhb6h35g1bk0x" path="res://data/themes/DefaultTheme.tres" id="1_al454"]
[ext_resource type="Script" path="res://sources/gui/Inventory.gd" id="2_vkka2"]
[ext_resource type="Texture2D" uid="uid://b1vkianlvn8yc" path="res://data/graphics/gui/bar.png" id="3_3s8jh"]
[ext_resource type="PackedScene" uid="uid://coppbcrkvraoh" path="res://presets/gui/ProgressBar.tscn" id="4_pr2vo"]
[ext_resource type="Script" path="res://sources/gui/CellGrid.gd" id="5_p6o47"]

[node name="Panel" type="PanelContainer"]
show_behind_parent = true
custom_minimum_size = Vector2(180, 100)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -940.0
offset_bottom = -555.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_al454")
script = ExtResource("2_vkka2")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_custom_anchors = true

[node name="Bars" type="HBoxContainer" parent="Margin/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WeightLabel" type="Label" parent="Margin/VBoxContainer/Bars"]
layout_mode = 2
size_flags_vertical = 3
text = "Weight"

[node name="WeightTex" type="NinePatchRect" parent="Margin/VBoxContainer/Bars"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("3_3s8jh")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 3
patch_margin_bottom = 3

[node name="ProgressBar" parent="Margin/VBoxContainer/Bars/WeightTex" instance=ExtResource("4_pr2vo")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
textureProgress = null
labelColor = Color(0.32549, 0.305882, 0.290196, 1)
labelUnit = " kg"
labelOffset = Vector2(0, -4)
delayToFillSec = 2.0
precisionDivider = 100
numberAfterComma = 2
metadata/_edit_layout_mode = 1

[node name="SlotLabel" type="Label" parent="Margin/VBoxContainer/Bars"]
layout_mode = 2
size_flags_vertical = 3
text = "Slot"

[node name="SlotTex" type="NinePatchRect" parent="Margin/VBoxContainer/Bars"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_3s8jh")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 3
patch_margin_bottom = 3

[node name="ProgressBar" parent="Margin/VBoxContainer/Bars/SlotTex" instance=ExtResource("4_pr2vo")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
textureProgress = null
labelColor = Color(0.32549, 0.305882, 0.290196, 1)
labelOffset = Vector2(0, -4)
delayToFillSec = 2.0
metadata/_edit_layout_mode = 1

[node name="WeightSeparator" type="HSeparator" parent="Margin/VBoxContainer"]
layout_mode = 2

[node name="Container" type="ScrollContainer" parent="Margin/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 3

[node name="Margin" type="MarginContainer" parent="Margin/VBoxContainer/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2

[node name="Grid" type="GridContainer" parent="Margin/VBoxContainer/Container/Margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 4
script = ExtResource("5_p6o47")

[node name="ButtonsSeparator" type="HSeparator" parent="Margin/VBoxContainer"]
layout_mode = 2

[node name="ItemButtons" type="HBoxContainer" parent="Margin/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Drop" type="Button" parent="Margin/VBoxContainer/ItemButtons"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"LargeButton"
text = "Drop"

[node name="Control" type="Control" parent="Margin/VBoxContainer/ItemButtons"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="Unequip" type="Button" parent="Margin/VBoxContainer/ItemButtons"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"LargeButton"
text = "Unequip"

[node name="Equip" type="Button" parent="Margin/VBoxContainer/ItemButtons"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"LargeButton"
text = "Equip"

[node name="Use" type="Button" parent="Margin/VBoxContainer/ItemButtons"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"LargeButton"
text = "Use"

[node name="DropButtons" type="HBoxContainer" parent="Margin/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="Cancel" type="Button" parent="Margin/VBoxContainer/DropButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"LargeButton"
text = "Cancel"

[node name="EmptyLeft" type="Control" parent="Margin/VBoxContainer/DropButtons"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="Less" type="Button" parent="Margin/VBoxContainer/DropButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"LargeButton"
text = "<"

[node name="Label" type="Label" parent="Margin/VBoxContainer/DropButtons"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "1"
horizontal_alignment = 1

[node name="More" type="Button" parent="Margin/VBoxContainer/DropButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"LargeButton"
text = ">"

[node name="EmptyRight" type="Control" parent="Margin/VBoxContainer/DropButtons"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="Confirm" type="Button" parent="Margin/VBoxContainer/DropButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"LargeButton"
text = "Confirm"

[connection signal="gui_input" from="." to="." method="OnGuiInput"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="resized" from="Margin/VBoxContainer/Container/Margin/Grid" to="Margin/VBoxContainer/Container/Margin/Grid" method="_on_panel_resized"]
[connection signal="pressed" from="Margin/VBoxContainer/ItemButtons/Drop" to="." method="_on_drop_pressed"]
[connection signal="pressed" from="Margin/VBoxContainer/ItemButtons/Unequip" to="." method="_on_unequip_pressed"]
[connection signal="pressed" from="Margin/VBoxContainer/ItemButtons/Equip" to="." method="_on_equip_pressed"]
[connection signal="pressed" from="Margin/VBoxContainer/ItemButtons/Use" to="." method="_on_use_pressed"]
[connection signal="pressed" from="Margin/VBoxContainer/DropButtons/Cancel" to="." method="_on_drop_cancel_pressed"]
[connection signal="pressed" from="Margin/VBoxContainer/DropButtons/Less" to="." method="_on_drop_less_pressed"]
[connection signal="pressed" from="Margin/VBoxContainer/DropButtons/More" to="." method="_on_drop_more_pressed"]
[connection signal="pressed" from="Margin/VBoxContainer/DropButtons/Confirm" to="." method="_on_confirm_drop_pressed"]
